--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -1,8 +1,10 @@
 <template name="UsersList">
   {{pageTitle "Users"}}
 
-  {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
   <div class="box">
+    <div class="box-header with-border">
+    {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
+    </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
