--- a/app/client/templates/field/edit/edit.html
+++ b/app/client/templates/field/edit/edit.html
@@ -2,10 +2,17 @@
   <div class="fill">
     <div class="contain" style="overflow-y:auto;padding:10px">
         {{pageTitle "Edit Field"}}
-        {{#if (can "remove" field)}}
-        {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
-        {{/if}}
-        {{> breadcrumb}}
+
+        <section class="content-header">{{> breadcrumb}}</section>
+
+        <div class="box">
+          <div class="box-header with-border">
+            {{#if (can "remove" field)}}
+              <span style="float:right">{{> quickRemoveButton collection="Forms" _id=form._id class="btn btn-danger"}}</span>
+            {{/if}}
+          </div>
+          <div class="box-body table-responsive">
+
       {{#if (can "update" field)}}
       {{> quickForm collection="Fields" doc=field schema=schema id="editFieldForm" type="update" omitFields="createdBy" buttonContent="Update"}}
       {{/if}}
@@ -25,6 +32,8 @@
 </div>
 </div>
 <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button-->
+    </div>
+    </div>
     </div>
   </div>
 </template>
