--- a/app/client/templates/menu/list.html
+++ b/app/client/templates/menu/list.html
@@ -1,7 +1,9 @@
 <template name="MenusList">
   {{pageTitle "Menus"}}
-  {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
   <div class="box">
+    <div class="box-header with-border">
+      {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
+    </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
