--- a/app/client/templates/page/edit.html
+++ b/app/client/templates/page/edit.html
@@ -1,40 +1,46 @@
 <template name="EditPage">
   {{pageTitle "Edit Page"}}
-  {{#if (can "update" page)}}
-    {{> quickRemoveButton collection="Pages" _id=page._id onSuccess=onSuccess class="btn btn-danger"}}
-  {{/if}}
-  {{> breadcrumb}}
-  {{#if (can "update" page)}}
-    {{> quickForm collection="Pages" doc=page id="editPageForm" type="update" omitFields="createdBy" buttonContent="Update"}}
-  {{/if}}
-  <hr>
-  <h4>Widgets</h4>
-  {{#linkTo route="insertWidget" parent=page._id}}<i class="fa fa-plus"></i> New Widget{{/linkTo}}
+  <section class="content-header">{{> breadcrumb}}</section>
   <div class="box">
-    <div class="box-body table-responsive no-padding">
+    <div class="box-header with-border">
+      {{#if (can "update" page)}}
+      <span style="float:right">{{> quickRemoveButton collection="Pages" _id=page._id onSuccess=onSuccess class="btn btn-danger"}}</span>
+      {{/if}}
+    </div>
+    <div class="box-body table-responsive">
+      {{#if (can "update" page)}}
+      {{> quickForm collection="Pages" doc=page id="editPageForm" type="update" omitFields="createdBy" buttonContent="Update"}}
+      {{/if}}
+      <hr>
+      <h4>Widgets</h4>
+      {{#linkTo route="insertWidget" parent=page._id}}<i class="fa fa-plus"></i> New Widget{{/linkTo}}
+      <div class="box">
+        <div class="box-body table-responsive no-padding">
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>type</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-    {{#each widgets}}
-      <tr>
-        <td>{{type}}</td>
-        <td>
-          {{#if (can "update" this)}}
-          {{#linkTo route='editWidget'}}
-            <i class="fa fa-pencil-square-o"></i>
-          {{/linkTo}}
-          {{/if}}
-        </td>
-      </tr>
-    {{/each}}
-    </tbody>
-  </table>
-</div>
-</div>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>type</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              {{#each widgets}}
+              <tr>
+                <td>{{type}}</td>
+                <td>
+                  {{#if (can "update" this)}}
+                  {{#linkTo route='editWidget'}}
+                  <i class="fa fa-pencil-square-o"></i>
+                  {{/linkTo}}
+                  {{/if}}
+                </td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
