--- a/app/client/templates/page/list.html
+++ b/app/client/templates/page/list.html
@@ -1,7 +1,9 @@
 <template name="PagesList">
   {{pageTitle "Pages"}}
-  {{#linkTo route="insertPage"}}<i class="fa fa-plus"></i> New Page{{/linkTo}}
   <div class="box">
+    <div class="box-header with-border">
+      {{#linkTo route="insertPage"}}<i class="fa fa-plus"></i> New Page{{/linkTo}}
+    </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
