--- a/app/client/templates/type/insert.html
+++ b/app/client/templates/type/insert.html
@@ -1,4 +1,8 @@
 <template name="InsertType">
   {{pageTitle "Insert Type"}}
-  {{> quickForm collection="Types" id="insertTypeForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+  <div class="box">
+    <div class="box-header with-border">
+      {{> quickForm collection="Types" id="insertTypeForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+    </div>
+  </div>
 </template>
