--- a/app/client/templates/type/list.html
+++ b/app/client/templates/type/list.html
@@ -1,7 +1,9 @@
 <template name="TypesList">
   {{pageTitle "Types"}}
-  {{#linkTo route="insertType"}}<i class="fa fa-plus"></i> New Type{{/linkTo}}
   <div class="box">
+    <div class="box-header with-border">
+    {{#linkTo route="insertType"}}<i class="fa fa-plus"></i> New Type{{/linkTo}}
+    </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
