--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -7,7 +7,7 @@
       {{#if (can "remove" widget)}}
       {{> quickRemoveButton collection="Widgets" _id=widget._id beforeRemove=beforeRemove class="btn btn-danger"}}
       {{/if}}
-      {{> breadcrumb}}
+      <section class="content-header">{{> breadcrumb}}</section>
 
       {{#if destroyForm}}
       {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
