admin list labels for forms

--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -8,7 +8,7 @@
       <tr>
         <th>Created by</th>
         {{#each getSchema}}
-          <th>{{label}}</th>
+          <th>{{label .. this}}</th>
         {{/each}}
         <th></th>
       </tr>
