android login fix hopefully

--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -36,7 +36,7 @@
               'https://www.googleapis.com/auth/drive',
               'https://www.googleapis.com/auth/calendar',
               'https://www.googleapis.com/auth/userinfo.profile',
-              'https://www.googleapis.com/auth/tasks'],  requestOfflineToken: true})"><i class="fa fa-plus"></i>Sign in</a><!--forceApprovalPrompt: true-->
+              'https://www.googleapis.com/auth/tasks'], loginStyle: 'redirect',  requestOfflineToken: true})"><i class="fa fa-plus"></i>Sign in</a><!--forceApprovalPrompt: true-->
             </li>
             {{/if}}
             <!--li class="dropdown user user-menu">
