--- a/app/client/templates/layouts/master_layout/menus.html
+++ b/app/client/templates/layouts/master_layout/menus.html
@@ -13,12 +13,14 @@
     </ul>
   </li>
   {{/if}}
+
   {{#each menus}}
   <li class="treeview">
     <a href="#"><i class="fa fa-link"></i> <span>{{title}}</span> <i class="fa fa-angle-left pull-right"></i></a>
     <ul class="treeview-menu">
       {{#each item}}
-        <li><a href="{{path}}">{{title}}</a></li>
+        <li><a href="{{path}}" class="hidden-lg" onclick="$('.sidebar-toggle').click()">{{title}}</a>
+        <a href="{{path}}" class="hidden-sm hidden-md hidden-xs">{{title}}</a></li>
       {{/each}}
     </ul>
   </li>
