Startup code for forms rewritten, approval email notifications

--- a/app/client/templates/field/edit/edit.html
+++ b/app/client/templates/field/edit/edit.html
@@ -8,7 +8,7 @@
         <div class="box">
           <div class="box-header with-border">
             {{#if (can "remove" field)}}
-              <span style="float:right">{{> quickRemoveButton collection="Forms" _id=form._id class="btn btn-danger"}}</span>
+              <span style="float:right">{{> quickRemoveButton collection="Fields" _id=field._id class="btn btn-danger"}}</span>
             {{/if}}
           </div>
           <div class="box-body table-responsive">
