--- a/app/client/templates/form/submissions/submit.html
+++ b/app/client/templates/form/submissions/submit.html
@@ -6,7 +6,7 @@
       {{#if destroyForm}}
           {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
       {{else}}
-          {{> quickForm collection=getCollection schema=getSchema id="submitForm" type="insert" omitFields="createdBy" buttonContent="Submit"}}
+          {{> quickForm collection=collection doc=item schema=getSchema id="insertForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
       {{/if}}
     </div>
   </div>
