--- a/app/client/templates/page/edit.html
+++ b/app/client/templates/page/edit.html
@@ -31,7 +31,7 @@
                 <td>
                   {{#if (can "update" this)}}
                   {{#linkTo route='editWidget'}}
-                  <i class="fa fa-pencil-square-o"></i>
+                  <button class="btn btn-info" type="button">Edit</button>
                   {{/linkTo}}
                   {{/if}}
                 </td>
