--- a/app/client/templates/role/list.html
+++ b/app/client/templates/role/list.html
@@ -19,7 +19,7 @@
         <td>{{name}}</td>
         <td>
           {{#linkTo route='editRole'}}
-            <i class="fa fa-pencil-square-o"></i>
+            <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
       </tr>
