--- a/app/client/templates/time/list.html
+++ b/app/client/templates/time/list.html
@@ -19,7 +19,7 @@
         <td>{{location}}</td>
         <td>
           {{#linkTo route='editTime'}}
-            <i class="fa fa-pencil-square-o"></i>
+            <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
       </tr>
