--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -25,7 +25,7 @@
         <td>{{profile.name}}</td>
         <td>
           {{#linkTo route='editUser'}}
-            <i class="fa fa-pencil-square-o"></i>
+            <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
       </tr>
