--- a/app/client/templates/form/edit.html
+++ b/app/client/templates/form/edit.html
@@ -34,7 +34,7 @@
         <td>{{type}}</td>
         <td>
           {{#linkTo route='editField'}}
-          <i class="fa fa-pencil-square-o"></i>
+          <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
       </tr>
