--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -24,7 +24,7 @@
         {{/each}}
         <td>
         {{#linkTo route="updateForm" form=../_id }}
-            <i class="fa fa-pencil-square-o"></i>
+            <button class="btn btn-info" type="button">Edit</button>
         {{/linkTo}}
         </td>
       </tr>
