--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -26,7 +26,7 @@
             {{/each}}
             <td>
               {{#linkTo route="updateForm" form=../_id }}
-              <i class="fa fa-pencil-square-o"></i>
+              <button class="btn btn-info" type="button">Edit</button>
               {{/linkTo}}
             </td>
           </tr>
