--- a/app/client/templates/menu/list.html
+++ b/app/client/templates/menu/list.html
@@ -18,7 +18,7 @@
         <td>{{title}}</td>
         <td>
           {{#linkTo route='editMenu'}}
-            <i class="fa fa-pencil-square-o"></i>
+            <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
       </tr>
