added graphics to buttons

--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -24,7 +24,7 @@
         {{/each}}
         <td>
         {{#linkTo route="updateForm" form=../_id }}
-            <button class="btn btn-info" type="button">Edit</button>
+            <button class="btn btn-info" type="button">Admin</button>
         {{/linkTo}}
         </td>
       </tr>
