--- a/app/client/templates/role/edit.html
+++ b/app/client/templates/role/edit.html
@@ -1,7 +1,7 @@
 <template name="EditRole">
-  {{pageTitle "Edit role"}}
   <div class="box">
     <div class="box-header with-border">
+      <h3 class="box-title">Edit role</h3>
       <span style="float:right">{{> quickRemoveButton collection="Meteor.roles" _id=obj._id beforeRemove=beforeRemove class="btn btn-danger"}}</span>
     </div>
     <div class="box-body table-responsive">
