--- a/app/client/templates/role/insert.html
+++ b/app/client/templates/role/insert.html
@@ -1,6 +1,8 @@
 <template name="InsertRole">
-  {{pageTitle "Insert role"}}
   <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">Insert role</h3>
+    </div>
     <div class="box-body table-responsive no-padding">
   {{> quickForm collection="Meteor.roles" id="insertRoleForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
