--- a/app/client/templates/form/insert.html
+++ b/app/client/templates/form/insert.html
@@ -1,7 +1,9 @@
 <template name="InsertForm">
-  {{pageTitle "Insert form"}}
 
   <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">Insert form</h3>
+    </div>
     <div class="box-body table-responsive">
       {{> quickForm collection="Forms" id="insertFormForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
     </div>
