--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -1,7 +1,10 @@
 <template name="submissionsAdmin">
-    {{pageTitle title}}
-    <section class="content-header">{{> breadcrumb}}</section>
   <div class="box">
+    <div class="box-header with-border">
+
+      <h3 class="box-title">{{label title}}</h3>
+      <span style="float:right">{{> breadcrumb}}</span>
+    </div>
     <div class="box-body table-responsive no-padding">
 <table class="table table-hover">
     <thead>
