--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -1,12 +1,19 @@
 <template name="submissions">
-  {{pageTitle title}}
-  <section class="content-header">{{> breadcrumb}}</section>
   <div class="box">
     <div class="box-header with-border">
-      {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" type="button">New submission</button>{{/linkTo}}
+      <h3 class="box-title">{{title}}</h3>
+
+    <span style="float:right">
       {{#if canAdmin}}
-      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="float:right" type="button">Admin</button>{{/linkTo}}
+      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" type="button">Admin</button>{{/linkTo}}
       {{/if}}
+    </span>
+    <span style="float:right">
+    {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" type="button">New submission</button>{{/linkTo}}
+    </span>
+    <span style="float:right">
+    {{> breadcrumb}}
+    </span>
     </div>
     <div class="box-body table-responsive no-padding">
       <table class="table table-hover">
