--- a/app/client/templates/form/submissions/update.html
+++ b/app/client/templates/form/submissions/update.html
@@ -1,8 +1,8 @@
 <template name="updateForm">
   {{#if schema}}
-  {{pageTitle form.title}}
   <div class="box">
     <div class="box-header with-border">
+      <h3 class="box-title">{{form.title}}</h3>
       <span style="float:right">{{> quickRemoveButton collection=collection _id=item._id onSuccess=onSuccess onError=onError class="btn btn-danger"}}</span>
     </div>
     <div class="box-body table-responsive">
