--- a/app/client/templates/menu/edit.html
+++ b/app/client/templates/menu/edit.html
@@ -1,8 +1,12 @@
 <template name="EditMenu">
-  {{pageTitle "Edit menu"}}
   <div class="box">
     <div class="box-header with-border">
-        <span style="float:right">{{> quickRemoveButton collection="Menus" _id=this.menu._id beforeRemove=beforeRemove class="btn btn-danger"}}</span>
+      <h3 class="box-title">
+        Edit menu
+      </h3>
+      <span style="float:right">
+        {{> quickRemoveButton collection="Menus" _id=this.menu._id beforeRemove=beforeRemove class="btn btn-danger"}}
+      </span>
     </div>
     <div class="box-body table-responsive">
     {{> quickForm collection="Menus" doc=this.menu id="editMenuForm" type="update" omitFields="createdBy" buttonContent="Update"}}
