--- a/app/client/templates/menu/insert.html
+++ b/app/client/templates/menu/insert.html
@@ -1,4 +1,10 @@
 <template name="InsertMenu">
-  {{pageTitle "Insert menu"}}
-  {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+  <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">Insert Menu</h3>
+    </div>
+    <div class="box-body table-responsive no-padding">
+      {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
+    </div>
+  </div>
 </template>
