--- a/app/client/templates/menu/list.html
+++ b/app/client/templates/menu/list.html
@@ -1,8 +1,8 @@
 <template name="MenusList">
-  {{pageTitle "Menus"}}
   <div class="box">
     <div class="box-header with-border">
-      {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
+      <h3 class="box-title">Menus</h3>
+      <span style="float:right">{{#linkTo route="insertMenu"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Menu</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
