--- a/app/client/templates/page/edit.html
+++ b/app/client/templates/page/edit.html
@@ -1,10 +1,12 @@
 <template name="EditPage">
-  {{pageTitle "Edit Page"}}
-  <section class="content-header">{{> breadcrumb}}</section>
   <div class="box">
     <div class="box-header with-border">
+      <h3 class="box-title">Edit page</h3>
       {{#if (can "update" page)}}
-      <span style="float:right">{{> quickRemoveButton collection="Pages" _id=page._id onSuccess=onSuccess class="btn btn-danger"}}</span>
+      <span style="float:right">
+        {{> quickRemoveButton collection="Pages" _id=page._id onSuccess=onSuccess class="btn btn-danger"}}
+        <section class="content-header">{{> breadcrumb}}</section>
+      </span>
       {{/if}}
     </div>
     <div class="box-body table-responsive">
