--- a/app/client/templates/page/insert.html
+++ b/app/client/templates/page/insert.html
@@ -1,6 +1,8 @@
 <template name="InsertPage">
-  {{pageTitle "Insert Page"}}
   <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">Insert page</h3>
+    </div>
     <div class="box-body table-responsive">
   {{> quickForm collection="Pages" id="insertPageForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </div>
