--- a/app/client/templates/page/list.html
+++ b/app/client/templates/page/list.html
@@ -1,8 +1,8 @@
 <template name="PagesList">
-  {{pageTitle "Pages"}}
   <div class="box">
     <div class="box-header with-border">
-      {{#linkTo route="insertPage"}}<i class="fa fa-plus"></i> New Page{{/linkTo}}
+      <h3 class="box-title">Pages</h3>
+      <span style="float:right">{{#linkTo route="insertPage"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Page</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
@@ -17,10 +17,12 @@
       <tr>
         <td>{{title}}</td>
         <td>
-          {{#linkTo route='editPage'}}
-            <button class="btn btn-info" type="button">Edit</button>
-          {{/linkTo}}
-          {{> quickRemoveButton collection="Pages" _id=this._id onSuccess=onSuccess class="btn btn-danger"}}        
+          <span style="float:right">
+            {{#linkTo route='editPage'}}
+              <button class="btn btn-info" type="button">Edit</button>
+            {{/linkTo}}
+            {{> quickRemoveButton collection="Pages" _id=this._id onSuccess=onSuccess class="btn btn-danger"}}
+          </span>
         </td>
       </tr>
     {{/each}}
