--- a/app/client/templates/role/list.html
+++ b/app/client/templates/role/list.html
@@ -1,9 +1,8 @@
 <template name="RolesList">
-  {{pageTitle "Roles"}}
-
   <div class="box">
     <div class="box-header with-border">
-      {{#linkTo route="insertRole"}}<i class="fa fa-plus"></i> New Role{{/linkTo}}
+      <h3 class="box-title">Roles</h3>
+      <span style="float:right">{{#linkTo route="insertRole"}}<button class="btn btn-info" type="button"><i class="fa fa-plus"></i> New Role</button>{{/linkTo}}</span>
     </div>
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
