--- a/app/client/templates/user/edit.html
+++ b/app/client/templates/user/edit.html
@@ -1,7 +1,10 @@
 <template name="EditUser">
-  {{pageTitle "Edit user"}}
-
   <div class="box">
+    <div class="box-header with-border">
+      <h3 class="box-title">
+        Edit user
+      </h3>
+    </div>
     <div class="box-body table-responsive no-padding">
       {{> quickForm collection="Meteor.users" doc=this id="profileUpdateForm" type="update" omitFields="createdAt" buttonContent="Save Changes"}}
     </div>
