--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -1,10 +1,11 @@
 <template name="UsersList">
-  {{pageTitle "Users"}}
-
   <div class="box">
     <div class="box-header with-border">
-    {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
+      <h3 class="box-title">
+        Users
+      </h3>
     </div>
+
     <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
