--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -1,52 +1,37 @@
 <template name="EditWidget">
   {{#if isWidget widget}}
   <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button>
+
   <div class="fill">
     <div class="contain" style="overflow-y:auto;padding:10px">
-      {{pageTitle "Edit Widget"}}
-      {{#if (can "remove" widget)}}
-      {{> quickRemoveButton collection="Widgets" _id=widget._id beforeRemove=beforeRemove class="btn btn-danger"}}
-      {{/if}}
-      <section class="content-header">{{> breadcrumb}}</section>
 
-      {{#if destroyForm}}
-      {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
-      {{else}}
-      {{#if (can "update" widget)}}
-      {{> quickForm collection="Widgets" doc=widget schema=schema id="editWidgetForm" type="update" omitFields="createdBy" buttonContent="Update"}}
-      {{#if isForm widget}}
-      {{#linkTo route="insertField" parent=widget._id}}<i class="fa fa-plus"></i> New Field{{/linkTo}}
       <div class="box">
-        <div class="box-body table-responsive no-padding">
-      <table id="items" class="table table-hover">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Type</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each fields}}
-          <tr data-id='{{_id}}' data-listposition='{{listposition}}'>
-            <td><i class="sortable-handle mdi-action-view-headline pull-right"></i></td>
-            <td>{{name}}</td>
-            <td>{{type}}</td>
-            <td>
-              {{#linkTo route='editField'}}
-              <button class="btn btn-info" type="button">Edit</button>
-              {{/linkTo}}
-            </td>
-          </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-  </div>
-      {{/if}}
-      {{/if}}
-      {{/if}}
+        <div class="box-header with-border">
+          <h3 class="box-title">
+            Edit form
+          </h3>
+          <div class="box-tools">
+            <span style="float: right;">{{> breadcrumb}}</span>
+            {{#if (can "remove" widget)}}
+            {{> quickRemoveButton collection="Widgets" style="float:right" _id=widget._id beforeRemove=beforeRemove class="btn btn-danger"}}
+            {{/if}}
+          </div>
+        </div>
+        <div class="box-body table-responsive">
+
+          {{#if destroyForm}}
+          {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
+          {{else}}
+          {{#if (can "update" widget)}}
+          {{> quickForm collection="Widgets" doc=widget schema=schema id="editWidgetForm" type="update" omitFields="createdBy" buttonContent="Update"}}
+          {{#if isForm widget}}
+          {{#linkTo route="insertField" parent=widget._id}}<i class="fa fa-plus"></i> New Field{{/linkTo}}
+          {{/if}}
+          {{/if}}
+          {{/if}}
+
+        </div>
+      </div>
 
       <!-- Sidebar -->
       <div id="split-right" class="split-right collapse" >
@@ -64,5 +49,5 @@
       </div>
     </div>
   </div>
-  {{/if}}
+{{/if}}
 </template>
