--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -23,6 +23,7 @@
           <ul class="nav navbar-nav">
             <!-- Messages: style can be found in dropdown.less-->
             {{#if currentUser}}
+            {{> navbarUploads}}
             {{> navbarMessages}}
             {{> navbarUsers}}
 
