--- a/app/client/templates/form/submissions/update.html
+++ b/app/client/templates/form/submissions/update.html
@@ -2,10 +2,11 @@
   {{#if schema}}
   <div class="box">
     <div class="box-header with-border">
-      <h3 class="box-title">{{form.title}}</h3>
+      <h3 class="box-title">{{form.title}} - {{userName item.createdBy}}</h3>
       <span style="float:right">{{> quickRemoveButton collection=collection _id=item._id onSuccess=onSuccess onError=onError class="btn btn-danger"}}</span>
     </div>
     <div class="box-body table-responsive">
+
   {{> quickForm collection=collection doc=item schema=schema id="updateForm" type="update" omitFields="createdBy" buttonContent="Submit"}}
   {{#each getFileTypes}}
     {{#with getFile ..}}
