--- a/app/client/templates/mail/messages.html
+++ b/app/client/templates/mail/messages.html
@@ -38,6 +38,7 @@
         <table class="table table-hover table-striped">
           <tbody>
           {{#each messages}}
+            {{debug}}
             <tr>
               <td><input type="checkbox"></td>
               <td class="mailbox-star"><a href="#"><i class="fa fa-star text-yellow"></i></a></td>
