Email fix, file uploads, file conversion, first file display, media player

--- a/app/client/templates/form/edit.html
+++ b/app/client/templates/form/edit.html
@@ -32,7 +32,7 @@
         <td>{{name}}</td>
         <td>{{type}}</td>
         <td>
-          {{#linkTo route='editField'}}
+          {{#linkTo route='editField' form=(formId)}}
           <button class="btn btn-info" type="button">Edit</button>
           {{/linkTo}}
         </td>
