--- a/app/client/templates/form/list.html
+++ b/app/client/templates/form/list.html
@@ -17,8 +17,11 @@
       <tr>
         <td>{{title}}</td>
         <td>
-          {{#linkTo route='editForm'}}
+          {{#linkTo route='editForm' form=this._id}}
             <button class="btn btn-info" type="button">Edit</button>
+          {{/linkTo}}
+          {{#linkTo route='submissions'}}
+            <button class="btn btn-info" type="button">List Submissions</button>
           {{/linkTo}}
         </td>
       </tr>
