--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -107,3 +107,17 @@ bottom: 0px;
     top:100px;
   }
 }
+
+#mediawrapper{
+margin-left: auto;
+margin-right:auto;
+width:430px;
+}
+
+.control-sidebar-bg, .control-sidebar {
+    width: 400px !important;
+}
+
+.control-sidebar>.tab-content {
+  padding: 0px !important;
+}
