--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -1,72 +1,75 @@
 <template name="MasterLayout">
   <div class="fill">
     <div class="contain">
-    {{#AdminLTE skin="blue"}}
-    <header class="main-header">
+      {{#AdminLTE skin="blue"}}
+      <header class="main-header">
 
-      <!-- Logo -->
-      <a href="index2.html" class="logo">
-        <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini">CA</span>
-        <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Coastal Accounting</b></span>
-      </a>
-
-      <!-- Header Navbar -->
-      <nav class="navbar navbar-static-top" role="navigation">
-        <!-- Sidebar toggle button-->
-        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-          <span class="sr-only">Toggle navigation</span>
+        <!-- Logo -->
+        <a href="index2.html" class="logo">
+          <!-- mini logo for sidebar mini 50x50 pixels -->
+          <span class="logo-mini">CA</span>
+          <!-- logo for regular state and mobile devices -->
+          <span class="logo-lg"><b>Coastal Accounting</b></span>
         </a>
-        <!-- Navbar Right Menu -->
-        <div class="navbar-custom-menu">
-          <ul class="nav navbar-nav">
-            <!-- Messages: style can be found in dropdown.less-->
-            {{#if currentUser}}
-            {{> navbarUploads}}
-            {{> navbarMessages}}
-            {{> navbarUsers}}
 
-            <!-- User Account Menu -->
-            {{> loginButtons}}
-            {{else}}
-            <li>
-              <a href="#" onclick="Meteor.loginWithGoogle({requestPermissions:[
-              'https://www.googleapis.com/auth/userinfo.email',
-              'https://www.googleapis.com/auth/drive',
-              'https://www.googleapis.com/auth/calendar',
-              'https://www.googleapis.com/auth/userinfo.profile',
-              'https://www.googleapis.com/auth/tasks',
-              'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})"><i class="fa fa-plus"></i>Sign in</a><!--forceApprovalPrompt: true-->
-            </li>
-            {{/if}}
-            <!--li class="dropdown user user-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{{userImage}}" class="user-image" alt="User Image">
-            <span class="hidden-xs">{{userName}}</span>
+        <!-- Header Navbar -->
+        <nav class="navbar navbar-static-top" role="navigation">
+          <!-- Sidebar toggle button-->
+          <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <span class="sr-only">Toggle navigation</span>
           </a>
-          <ul class="dropdown-menu">
-          <li class="user-header">
-          <img src="{{userImage}}" class="img-circle" alt="User Image">
-          <p>
-          {{userName}}
-          <small>Member since Nov. 2012</small>
-        </p>
-      </li>
-      <li class="user-body">
+          <!-- Navbar Right Menu -->
+          <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+              <!-- Messages: style can be found in dropdown.less-->
+              {{#if currentUser}}
+              {{> navbarUploads}}
+              {{> navbarMessages}}
+              {{> navbarUsers}}
+              <!-- User Account Menu -->
+              {{> loginButtons}}
+              {{else}}
+              {{#if configured}}
+              <li>
+                <a href="#" onclick="Meteor.loginWithGoogle({requestPermissions:[
+                  'https://www.googleapis.com/auth/userinfo.email',
+                  'https://www.googleapis.com/auth/drive',
+                  'https://www.googleapis.com/auth/calendar',
+                  'https://www.googleapis.com/auth/userinfo.profile',
+                  'https://www.googleapis.com/auth/tasks',
+                  'https://mail.google.com/'], loginStyle: 'redirect',  requestOfflineToken: true})"><i class="fa fa-plus"></i>Sign in</a><!--forceApprovalPrompt: true-->
+                </li>
+                {{else}}
+                {{> loginButtons}}
+                {{/if}}
+                {{/if}}
+                <!--li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <img src="{{userImage}}" class="user-image" alt="User Image">
+                <span class="hidden-xs">{{userName}}</span>
+              </a>
+              <ul class="dropdown-menu">
+              <li class="user-header">
+              <img src="{{userImage}}" class="img-circle" alt="User Image">
+              <p>
+              {{userName}}
+              <small>Member since Nov. 2012</small>
+            </p>
+          </li>
+          <li class="user-body">
+          <div class="col-xs-4 text-center">
+          <a href="#">Followers</a>
+        </div>
+        <div class="col-xs-4 text-center">
+        <a href="#">Sales</a>
+      </div>
       <div class="col-xs-4 text-center">
-      <a href="#">Followers</a>
+      <a href="#">Friends</a>
     </div>
-    <div class="col-xs-4 text-center">
-    <a href="#">Sales</a>
-  </div>
-  <div class="col-xs-4 text-center">
-  <a href="#">Friends</a>
-</div>
-</li>
-<li class="user-footer">
-<div class="pull-left">
-<a href="#" class="btn btn-default btn-flat">Profile</a>
+  </li>
+  <li class="user-footer">
+  <div class="pull-left">
+  <a href="#" class="btn btn-default btn-flat">Profile</a>
 </div>
 <div class="pull-right">
 <a href="#" class="btn btn-default btn-flat">Sign out</a>
@@ -75,9 +78,9 @@
 </ul>
 </li-->
 <!-- Control Sidebar Toggle Button -->
-<!--li>
-<a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-</li-->
+<li>
+  <a href="#" onclick="$('.control-sidebar').toggle(400)"><i class="fa fa-gears"></i></a>
+</li>
 </ul>
 </div>
 </nav>
@@ -93,7 +96,7 @@
     <div class="user-panel">
       <div class="pull-left image">
         {{#with FS.GetFile "files" currentUser.profile.picture}}
-          <img src="{{url}}" class="img-circle" alt="User Image">
+        <img src="{{url}}" class="img-circle" alt="User Image">
         {{/with}}
       </div>
       <div class="pull-left info">
@@ -120,8 +123,9 @@
 {{/contents}}
 
 <!--footer class="main-footer">
-  <strong>Copyright &copy; 2015 <a href="#">Coastal Accounting</a>.</strong> All rights reserved.
 </footer-->
+<aside class="control-sidebar control-sidebar-dark">
+</aside>
 <!-- Main Footer -->
 {{/AdminLTE}}
 </div>
