Music and video now uploads and plays

--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -26,7 +26,7 @@
           <td>{{{cell .. this}}}</td>
         {{/each}}
         <td>
-        {{#linkTo route="updateForm" form=../_id }}
+        {{#linkTo route="updateAdminForm" form=../_id }}
             <button class="btn btn-info" type="button">Admin</button>
         {{/linkTo}}
         </td>
