--- a/app/client/templates/form/submissions/updateAdmin.html
+++ b/app/client/templates/form/submissions/updateAdmin.html
@@ -1,4 +1,4 @@
-<template name="UpdateAdminForm">
+<template name="updateAdminForm">
   {{#if schema}}
   <div class="box">
     <div class="box-header with-border">
