--- a/app/client/templates/layouts/master_layout/menus.html
+++ b/app/client/templates/layouts/master_layout/menus.html
@@ -9,7 +9,7 @@
         <li>{{#linkTo route="usersList"}}Users{{/linkTo}}</li>
         <li>{{#linkTo route="rolesList"}}Roles{{/linkTo}}</li>
         <li>{{#linkTo route="formsList"}}Forms{{/linkTo}}</li>
-        <li>{{#linkTo route="formsList"}}Config{{/linkTo}}</li>
+        <li>{{#linkTo route="configList"}}Config{{/linkTo}}</li>
     </ul>
   </li>
   {{/if}}
