--- a/app/client/templates/config/list.html
+++ b/app/client/templates/config/list.html
@@ -8,14 +8,16 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        <th>Title</th>
+        <th>Key</th>
+        <th>Value</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-    {{#each config}}
+    {{#each configs}}
       <tr>
-        <td>{{title}}</td>
+        <td>{{key}}</td>
+        <td>{{value}}</td>
         <td>
           {{#linkTo route='editConfig'}}
             <button class="btn btn-info" type="button">Edit</button>
