--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -28,7 +28,7 @@
               {{> navbarUsers}}
               <!-- User Account Menu -->
               <li>
-                <a href="#" onclick="Meteor.logout()"><i class="fa fa-minus"></i>Sign out</a><!--forceApprovalPrompt: true-->
+                <a href="#" onclick="Meteor.logout()"><i class="fa fa-minus"></i>&nbsp;Sign out</a><!--forceApprovalPrompt: true-->
               </li>
               {{else}}
               {{#if configured}}
@@ -82,7 +82,7 @@
 </li-->
 <!-- Control Sidebar Toggle Button -->
 <li>
-  <a href="#" onclick="$('.control-sidebar').toggle(400)"><i class="fa fa-gears"></i></a>
+  <a href="#" onclick="$('.control-sidebar').toggle(400)"><i class="fa fa-play"></i></a>
 </li>
 </ul>
 </div>
