--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -3,17 +3,30 @@
     <div class="box-header with-border">
       <h3 class="box-title">{{title}}</h3>
 
-    <span style="float:right">
+    <ul class="box-header-list">
+      <li>
+      <form action="#" method="get" class="form" style="width:200px">
+        <div class="input-group">
+          <input type="text" name="q" class="form-control form-search" placeholder="Search...">
+          <span class="input-group-btn">
+            <button type="submit" name="search" id="search-btn" class="btn btn-flat" ><i class="fa fa-search"></i></button>
+          </span>
+        </div>
+      </form>
+    </li>
+    <li>
       {{#if canAdmin}}
       {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" type="button">Admin</button>{{/linkTo}}
       {{/if}}
-    </span>
-    <span style="float:right">
-    {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" type="button">New submission</button>{{/linkTo}}
-    </span>
-    <span style="float:right">
-    {{> breadcrumb}}
-    </span>
+    </li>
+  <li>
+      {{#linkTo route="submitForm" form=_id}}<button class="btn btn-info" type="button">New submission</button>{{/linkTo}}
+    </li>
+    <li>
+
+      {{> breadcrumb}}
+    </li>
+  </ul>
     </div>
     <div class="box-body table-responsive no-padding">
       <table class="table table-hover">
