--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -65,7 +65,7 @@ box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
 }
 .content {
   position: absolute;
-  bottom: 0px;
+  bottom: 50px !important;
   left: 0px;
   right: 0px;
   overflow-y: auto;
