login screens loaded

--- a/app/client/templates/page/edit.html
+++ b/app/client/templates/page/edit.html
@@ -28,7 +28,8 @@
             </thead>
             <tbody>
               {{#each widgets}}
-              <tr>
+              <tr data-id='{{_id}}' data-listposition='{{listposition}}'>
+                <td><i class="fa-sort pull-right"></i></td>
                 <td>{{type}}</td>
                 <td>
                   {{#if (can "update" this)}}
