--- a/app/client/templates/form/edit.html
+++ b/app/client/templates/form/edit.html
@@ -28,7 +28,7 @@
     <tbody>
     {{#each fields}}
       <tr data-id='{{_id}}' data-listposition='{{listposition}}'>
-        <td><i class="sortable-handle mdi-action-view-headline pull-right"></i></td>
+        <td><i class="fa-sort pull-right"></i></td>
         <td>{{name}}</td>
         <td>{{type}}</td>
         <td>
