--- a/app/client/templates/mail/messages.html
+++ b/app/client/templates/mail/messages.html
@@ -38,16 +38,7 @@
         <table class="table table-hover table-striped">
           <tbody>
           {{#each messages}}
-            {{debug}}
-            <tr>
-              <td><input type="checkbox"></td>
-              <td class="mailbox-star"><a href="#"><i class="fa fa-star text-yellow"></i></a></td>
-              <td class="mailbox-name"><a href="read-mail.html">Alexander Pierce</a></td>
-              <td class="mailbox-subject"><b>AdminLTE 2.0 Issue</b> - Trying to find a solution to this problem...
-              </td>
-              <td class="mailbox-attachment"></td>
-              <td class="mailbox-date">5 mins ago</td>
-            </tr>
+            {{> mailMessage}}
           {{/each}}
           </tbody>
         </table>
