--- a/app/client/templates/mail/messages.html
+++ b/app/client/templates/mail/messages.html
@@ -73,3 +73,14 @@
   </div>
   <!-- /. box -->
 </template>
+
+<template name="mailMessage">
+  <tr>
+    <td><input type="checkbox"></td>
+    <td class="mailbox-star"><a href="https://mail.google.com/#inbox/{{id}}" target="_blank">Open in GMail</a></td>
+    <td class="mailbox-name">{{#linkTo route="mailMessageView" id=id}} {{message.from}} {{/linkTo}}</td>
+    <td class="mailbox-subject">{{message.subject}}</td>
+    <td class="mailbox-attachment"></td>
+    <td class="mailbox-date">5 mins ago</td>
+  </tr>
+</template>
