--- a/app/client/templates/mail/list.html
+++ b/app/client/templates/mail/list.html
@@ -1,10 +1,10 @@
 <template name="MailList">
 <div class="row">
-  <div class="col-md-3">
+  <!--div class="col-md-3">
     <a href="compose.html" class="btn btn-primary btn-block margin-bottom">Compose</a>
 
     {{> mailLabels}}
-  </div>
+  </div-->
   <!-- /.col -->
   <div class="col-md-9">
     {{> mailMessages}}
