user role field in signature

--- a/app/client/templates/mail/messageView.html
+++ b/app/client/templates/mail/messageView.html
@@ -9,6 +9,7 @@
               </div-->
             </div>
             <!-- /.box-header -->
+            {{debug message}}
             <div class="box-body no-padding">
               <div class="mailbox-read-info">
                 <h3>{{message.subject}}</h3>
