--- a/app/client/templates/user/edit.html
+++ b/app/client/templates/user/edit.html
@@ -4,7 +4,9 @@
       <h3 class="box-title">
         Edit user
       </h3>
-      <h2 class="btn btn-info setSignatureButton">Set signature</h2>
+      {{#callable name="setSignature" userId=_id}}
+        <h2 class="btn btn-info setSignatureButton">Set signature</h2>
+      {{/callable}}
     </div>
     <div class="box-body table-responsive no-padding">
       {{> quickForm collection="Meteor.users" doc=this id="profileUpdateForm" type="update" omitFields="createdAt" buttonContent="Save Changes"}}
